@@ -513,6 +513,12 @@ specifier|final
 name|int
 name|waitAfterExpiration
 decl_stmt|;
+DECL|field|thread
+specifier|private
+specifier|volatile
+name|Thread
+name|thread
+decl_stmt|;
 DECL|method|OverseerAutoReplicaFailoverThread
 specifier|public
 name|OverseerAutoReplicaFailoverThread
@@ -625,6 +631,15 @@ name|void
 name|run
 parameter_list|()
 block|{
+name|this
+operator|.
+name|thread
+operator|=
+name|Thread
+operator|.
+name|currentThread
+argument_list|()
+expr_stmt|;
 while|while
 condition|(
 operator|!
@@ -708,14 +723,6 @@ name|InterruptedException
 name|e
 parameter_list|)
 block|{
-name|Thread
-operator|.
-name|currentThread
-argument_list|()
-operator|.
-name|interrupt
-argument_list|()
-expr_stmt|;
 return|return;
 block|}
 block|}
@@ -3041,6 +3048,24 @@ name|isClosed
 operator|=
 literal|true
 expr_stmt|;
+name|Thread
+name|lThread
+init|=
+name|thread
+decl_stmt|;
+if|if
+condition|(
+name|lThread
+operator|!=
+literal|null
+condition|)
+block|{
+name|lThread
+operator|.
+name|interrupt
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 DECL|method|isClosed
 specifier|public
